# WikiWar

./: .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: monitor_evidence_backfill.py
tests/: test_controversy.py  test_evidence.py  test_historical.py  test_ingest.py  test_reverts.py  test_scoring.py  test_segments.py
wikiwar/: app.py  config.py  controversy.py  domain.py  evidence.py  historical.py  ingest.py  repository.py  reverts.py  schema.py  scoring.py  segments.py
wikiwar/static/: app.js  index.html  styles.css
